<!-- This xml file is the GUI for the main character creation page activity of character creation. -->
<!-- @author Caitlin Harding (cehardi) -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".CharCreateMainActivity" >

    <TextView
        android:id="@+id/char_creation_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/title_activity_char_create_main"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <LinearLayout
        android:id="@+id/homepage_buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical" >

        <Button
            android:id="@+id/basic_info"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:onClick="gotoBasicInfo"
            android:text="@string/button_basic_info" />

        <Button
            android:id="@+id/ability_scores"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:onClick="gotoAbilityScores"
            android:text="@string/button_ability_scores" />

        <Button
            android:id="@+id/skills"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:onClick="gotoSkills"
            android:text="@string/button_skills" />

        <Button
            android:id="@+id/combat"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:onClick="gotoCombat"
            android:text="@string/button_combat" />

        <Button
            android:id="@+id/saving_throws"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:onClick="gotoSavingThrows"
            android:text="@string/button_saving_throws" />

        <Button
            android:id="@+id/done_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:onClick="gotoCharacterList"
            android:text="@string/done" />
    </LinearLayout>

</RelativeLayout>