<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
	 android:layout_height="match_parent">
	<RelativeLayout 
	   
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:paddingBottom="@dimen/activity_vertical_margin"
	    android:paddingLeft="@dimen/activity_horizontal_margin"
	    android:paddingRight="@dimen/activity_horizontal_margin"
	    android:paddingTop="@dimen/activity_vertical_margin"
	    tools:context=".SignupActivity" >
	    
	    <TextView
	        android:id="@+id/username"
	        android:layout_marginTop="10dp"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_alignParentTop="true"
	        android:text="@string/username_signup_input"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
	    
	    <EditText
	        android:id="@+id/username_input"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/username"
	        android:inputType="text" />
	    
	    <TextView
	        android:id="@+id/username_error"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/username_input"
	        android:text="@string/invalid_username_message"
	        android:textColor="#FF0000"
	        android:visibility="gone"
	        android:textAppearance="?android:attr/textAppearanceSmall" />
	    
	    <TextView
	        android:id="@+id/password"
	        android:layout_marginTop="10dp"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/username_error"
	        android:text="@string/password_signup_input"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
	    
	    <EditText
	        android:id="@+id/password_input"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/password"
	        android:inputType="textPassword" />
	    
	    <TextView
	        android:id="@+id/invalid_password_error"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/password_input"
	        android:text="@string/invalid_password_message"
	        android:textColor="#FF0000"
	        android:visibility="gone"
	        android:textAppearance="?android:attr/textAppearanceSmall" />
	    
	    <TextView
	        android:id="@+id/confirm_password"
	        android:layout_marginTop="10dp"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/invalid_password_error"
	        android:text="@string/password_confirmation"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
	    
	    <EditText
	        android:id="@+id/confirm_password_input"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/confirm_password"
	        android:inputType="textPassword" />
	    
	    <TextView
	        android:id="@+id/nonmatching_password_error"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/confirm_password_input"
	        android:text="@string/non_matching_passwords_message"
	        android:textColor="#FF0000"
	        android:visibility="gone"
	        android:textAppearance="?android:attr/textAppearanceSmall" />
	    
	    <TextView
	        android:id="@+id/security_question_prompt"
	        android:layout_marginTop="10dp"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/nonmatching_password_error"
	        android:text="@string/security_question_prompt"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
	    
	    <Spinner
	        android:id="@+id/security_question_spinner"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/security_question_prompt"
	        android:layout_centerHorizontal="true"
	        android:drawSelectorOnTop="true"
	        android:textSize="12sp"
	        android:entries="@array/security_question_array"
	        android:prompt="@string/security_question_prompt" />
	    
	    <TextView
	        android:id="@+id/security_answer_prompt"
	        android:layout_marginTop="10dp"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/security_question_spinner"
	        android:text="@string/security_answer_prompt"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
	    
	    <EditText
	        android:id="@+id/security_answer_input"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/security_answer_prompt"
	        android:layout_centerHorizontal="true"
	        android:inputType="text" />
	    
	    <Button
	        android:id="@+id/finish_button"
	        android:layout_marginTop="10dp"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/security_answer_input"
	        android:layout_centerHorizontal="true"
	        android:text="@string/next_button"
	        android:onClick="gotoValidator" />

	</RelativeLayout>
</ScrollView>